--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projeto Calculadora</title>
-</head>
-<body>
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Calculadora Simples</h1>
+
+      <div class="card">
+        <div class="card-body">
+          <div class="mb-3 row">
+            <div class="col-auto">
+              <label for="num1" class="col-form-label">Número 1: </label>
+            </div>
+            <div class="col-md-3">
+              <input
+                type="number"
+                id="num1"
+                class="form-control"
+                placeholder="Digite primeiro número"
+              />
+            </div>
+          </div>
+          <div class="mb-3 row">
+            <div class="col-auto">
+              <label for="num2" class="col-form-label">Número 2: </label>
+            </div>
+            <div class="col-md-3">
+              <input
+                type="number"
+                id="num2"
+                class="form-control"
+                placeholder="Digite segundo número"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script type="module" src="script.js"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
