--- a/index.html
+++ b/index.html
@@ -13,43 +13,46 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container center">
-      <h1>Calculadora Simples</h1>
+    <div class="container">
+      <h1 class="text-center my-4">Calculadora Simples</h1>
+      <div class="card">
+        <div class="card-body">
+          <form>
+            <div class="mb-3">
+              <div class="col-auto">
+                <label for="num1" class="col-form-label">Número 1</label>
+              </div>
+              <div class="col-auto">
+                <input
+                  type="number"
+                  id="num1"
+                  class="form-control"
+                  placeholder="Digite o promeiro número"
+                />
+              </div>
+            </div>
 
-      <form class="m-5 p-5 border border-black">
-        <div class="row g-3 align-items-center">
-          <div class="col-auto">
-            <label for="num1" class="col-form-label">Número 1</label>
-          </div>
-          <div class="col-auto">
-            <input
-              type="number"
-              id="num1"
-              class="form-control"
-              placeholder="Digite"
-            />
-          </div>
+            <div class="mb-3">
+              <div class="col-auto">
+                <label for="num1" class="col-form-label">Número 2</label>
+              </div>
+              <div class="col-auto">
+                <input
+                  type="number"
+                  id="num1"
+                  class="form-control"
+                  placeholder="Digite o segundo número"
+                />
+              </div>
+            </div>
+
+            <button class="btn btn-outline-white border border-black">
+              Calcular
+            </button>
+            <span id="txt-resultado"></span>
+          </form>
         </div>
-
-        <div class="row g-3 align-items-center mt-2 mb-4">
-          <div class="col-auto">
-            <label for="num2" class="col-form-label">Número 2</label>
-          </div>
-          <div class="col-auto">
-            <input
-              type="number"
-              id="num2"
-              class="form-control"
-              placeholder="Digite"
-            />
-          </div>
-        </div>
-
-        <button class="btn btn-outline-white border border-black">
-          Calcular
-        </button>
-        <span id="txt-resultado"></span>
-      </form>
+      </div>
     </div>
 
     <script type="module" src="script.js"></script>
