add method innerText

--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
           <form id="formSoma">
             <div class="mb-3">
               <div class="col-auto">
-                <label for="num1" class="col-form-label">Número 1</label>
+                <label for="num1" class="col-form-label fw-bold"
+                  >Número 1</label
+                >
               </div>
               <div class="col-auto">
                 <input
                   type="number"
                   id="num1"
-                  class="form-control"
+                  class="form-control border-black"
                   placeholder="Digite o promeiro número"
                 />
               </div>
@@ -34,13 +36,15 @@
 
             <div class="mb-3">
               <div class="col-auto">
-                <label for="num1" class="col-form-label">Número 2</label>
+                <label for="num1" class="col-form-label fw-bold"
+                  >Número 2</label
+                >
               </div>
               <div class="col-auto">
                 <input
                   type="number"
                   id="num2"
-                  class="form-control"
+                  class="form-control border-black"
                   placeholder="Digite o segundo número"
                 />
               </div>
@@ -48,7 +52,7 @@
 
             <button
               type="submit"
-              class="btn btn-outline-white border border-black"
+              class="btn btn-outline-white border border-black fw-bold"
             >
               Calcular
             </button>
